<resources>
    <string name="app_name">Memo</string>
    <string name="company_name">YAOWER</string>
    <string name="from">from</string>
    <string name="send_code">send code</string>
    <string name="or">OR</string>
    <string name="welcome">Welcome!!</string>
    <string name="status">Status</string>
    <string name="number">Number</string>
    <string name="update">Update</string>
    <string name="logout">LogOut</string>
    <string name="active">active</string>
    <string name="verifiction_code">verifiction code</string>
    <string name="verifiction">verifiction</string>
    <string name="type_message">type message</string>
    <string name="light_mode_selected">Light Mode Selected</string>
    <string name="dark_mode_selected"> Dark Mode Selected</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="tab_text_1">Chats</string>
    <string name="tab_text_2">search</string>
    <string name="tab_text_3">Calls</string>
    <string name="tab_text_4">Profile</string>
    <string name="tab_text_5">Settings</string>

    <string name="special_number">Special Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="group_name">Group Name</string>
    <string name="memebers">Members</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="chat">Chats</string>
    <string name="stories">Stories</string>

    <string name="search">Search</string>
    <string name="archived">Archived</string>
    <string name="contact_number">Contact Number</string>
    <string name="new_group">New Group</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Language</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ui">UI</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="resend">Resend Code</string>
    <string-array name="android_dropdown_arrays">
        <item>Choose a Item</item>
        <item>number 1</item>
        <item>number 2</item>
        <item>number 3</item>
        <item>number 5</item>
        <item>number 6</item>
        <item>number 7</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
        <item>number 8</item>
    </string-array>
</resources>