<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <FrameLayout
    android:layout_width="match_parent"
    android:layout_weight="2"
    android:layout_height="0dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingTop="40dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_blnt"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/welcome"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/textColor">

        </TextView>
        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            android:textSize="30sp"
             />

    </LinearLayout>





        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/textColor"
            app:civ_border_width="2dp" />




</FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="36dp">
        <TextView
            android:id="@+id/textstatue"
            android:layout_width="wrap_content"
            android:text="@string/status"
            android:textSize="20dp"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textAppearance="@color/green_200"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/status"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:hint="Hello Iam Here"
            android:background="@null"
            android:textSize="15sp"
             />
        <TextView
            android:layout_marginTop="50dp"
            android:textAppearance="@color/green_200"
            android:id="@+id/textnumber"
            android:layout_width="wrap_content"
            android:text="@string/number"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:id="@+id/number"
            android:background="@null"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:hint="+963935013485"
            android:textSize="15sp"
            />


        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_custom"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:text="@string/update"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_custom"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@android:color/white"
            android:text="@string/logout"
            android:textSize="15sp" />

    </LinearLayout>
    </LinearLayout>

</ScrollView>