<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent"
    tools:context=".views.BasicActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        android:orientation="vertical">



    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:background="@null"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"

            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"

                android:orientation="vertical">

<!--                <LinearLayout-->
<!--                    android:layout_width="100dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:orientation="horizontal"-->
<!--                    >-->
<!--                <ImageButton-->
<!--                    android:id="@+id/add_to_archived"-->
<!--                    android:layout_width="0dp"-->
<!--                    android:layout_weight="0.1"-->
<!--                    android:layout_height="20dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:src="@drawable/ic_archived"-->
<!--                    android:background="@null"-->
<!--                    android:visibility="invisible"-->
<!--                    />-->
<!--                    <ImageButton-->
<!--                        android:id="@+id/delete"-->
<!--                        android:layout_width="0dp"-->
<!--                        android:layout_weight="0.1"-->
<!--                        android:layout_height="30dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:src="@drawable/ic_delete"-->
<!--                        android:background="@null"-->
<!--                        android:paddingStart="20dp"-->
<!--                        android:visibility="visible"-->
<!--                        />-->
<!--                </LinearLayout>-->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"

                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/textColor"
                    android:textSize="25sp"
                    android:layout_gravity="center">



                </TextView>

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search"
                    android:background="@drawable/ed_text_background"
                    app:queryHint="@string/search"
                    android:baselineAligned="false"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="30dp"
                    />
            </LinearLayout>
                />


        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <androidx.appcompat.widget.Toolbar-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/toolbar"-->
<!--            android:background="@color/green_500"-->
<!--            android:minHeight="?attr/actionBarSize"-->

<!--            >-->


<!--                <androidx.appcompat.widget.SearchView-->
<!--                    android:id="@+id/search"-->
<!--                    app:searchIcon="@android:drawable/ic_menu_search"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    />-->

<!--        </androidx.appcompat.widget.Toolbar>-->
<!--    </com.google.android.material.appbar.AppBarLayout>-->


<!--    <FrameLayout-->
<!--        android:id="@+id/flFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginTop="50dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" >-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical"-->

<!--            >-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/chat"-->
<!--                android:fontFamily="@font/roboto_regular"-->
<!--                android:textColor="@color/textColor"-->
<!--                android:textSize="25sp"-->
<!--                android:layout_gravity="center">-->

<!--            </TextView>-->


<!--             <androidx.appcompat.widget.SearchView-->
<!--                 android:id="@+id/search"-->
<!--                 android:background="@drawable/ed_text_background"-->
<!--                 app:queryHint="@string/search"-->
<!--                 android:baselineAligned="false"-->
<!--                 android:nestedScrollingEnabled="false"-->
<!--                 android:layout_width="match_parent"-->
<!--                 android:layout_height="40dp"-->
<!--                 android:layout_margin="20dp"-->
<!--                 android:layout_marginBottom="30dp"-->
<!--                                />-->

            <include layout="@layout/item_divider"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/liner_archived"
            android:visibility="gone"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_archived">

                </ImageView>

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/archived"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/textColor"
                android:textSize="25sp"
                >

            </TextView>



            </LinearLayout>

            <include layout="@layout/item_divider">
            </include>

        </LinearLayout>




<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/recycler"-->
<!--         />-->
        <!--no texts-->
        <com.tsuryo.swipeablerv.SwipeableRecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:leftBgColor="@color/blue"
            app:leftImage="@drawable/ic_add_archived"
            app:rightBgColor="@color/blue"
            app:rightImage="@drawable/ic_check"
            app:textColor="@android:color/white"
             />
        </LinearLayout>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="#007DFF"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_add"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_bottom_navigation"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="#007DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />




</androidx.constraintlayout.widget.ConstraintLayout>